# verity

./: .env.example  .gitignore  BACKTESTING_GUIDE.md  Dockerfile  ML_IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  create_test_image.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_verify.py
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  celery_app.py  config.py  main.py
app/api/v1/endpoints/: health.py  verify.py
app/core/: exceptions.py  security.py
app/db/: session.py
app/models/: database.py  schemas.py
app/services/: ingestion.py  scoring_engine.py  tasks.py  verification_pipeline.py
app/services/verification/: __init__.py  c2pa_verifier.py  contextual_verifier.py  hardware_auth.py  metadata_analyzer.py  ml_detector.py  ml_models.py  model_manager.py  preprocessing.py
app/utils/: file_handler.py  logging.py
docs/: ML_DETECTION_SYSTEM.md
scripts/: backtest.py  init_db.py  train_models.py
test_datasets_example/: manifest_template.json
tests/: __init__.py  test_config.py  test_health.py  test_ml_detector.py
